bug fix and improve ui

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="CMU Timetable" />
     <meta property="og:description" content="หาลิ๊งค์ตารางเรียนไม่เจอ? กดดูได้ที่นี่เลย " />
-    <meta property="og:image" content="https://www.zalzer.com/cmuregtimetable/img2.jpg" />
+    <meta property="og:image" content="https://www.zalzer.com/cmuregtimetable/img7.jpg" />
     <meta property="og:url" content="https://www.zalzer.com/cmuregtimetable/" />
     <meta name="description" content="ลิ๊งค์ตารางเรียนหาย? หาไม่เจอ? กดดูได้ที่นี่เลย ">
     <meta name="keywords" content="CMU,Timetable,Reg">
@@ -18,12 +18,11 @@
     <link rel="stylesheet" href="styles/timetablejs.css">
     <link rel="stylesheet" href="styles/style.css">
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
-    <meta charset="utf-8">
     
 </head>
 <body>
     <main>
-        <h1>CMU Timetable</h1>
+        <h1>CMU Timetable <small style="color:#cfcfcf;">BETA</small></h1>
         <h2>By <a href="http://fb.me/TuR10S">Chawasit Tengtrairatana</a></h2>
         <div id="box">
             <label>Semester eg.258:</label>
@@ -31,6 +30,8 @@
             <label>Student ID:</label>
             <input type="text" id="sid" name="studentid" maxlength="9" style="width:100px;"/>
             <button id="create" class="btn">GET</button>
+            <p>*หากต้องการดู เทอม 1 ปีการศึกษา 25[58] Semester จะเป็น 158 ภาคการเรียนที่ 2 จะเป็น 258 เป็นต้น </p>
+            <p>**โปรดระวัง เนื่องจากสคริปนี้ทำงานบน Web Browser ของผู้ใช้เองเกือบทั้งหมด อาจทำให้โปรแกรมค้างได้!!</p>
         </div>
         <div id="loading" class="sk-cube-grid">
             <div class="sk-cube sk-cube1"></div>
